--- a/css/styles.css
+++ b/css/styles.css
@@ -276,8 +276,6 @@ a {
 }
 
 .container-portfolio {
-  display: flex;
-  align-items: center;
 }
 
 .portfolio-title {
@@ -291,17 +289,25 @@ a {
   padding-bottom: 72px;
 }
 
+.container-portfolio-smart {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
+}
+
 .portfolio-list {
-  width: calc((100% - 48px) / 3);
+  display: flex;
+  flex-wrap: wrap;
   gap: 24px;
+  row-gap: 48px;
 }
 
 .portfolio-item {
-  display: flex;
-  align-items: center;
-  column-gap: 24px;
-  row-gap: 44px;
-  flex-wrap: wrap;
+  flex-basis: calc((100% - 48px) / 3);
+}
+
+.taki {
+  padding-bottom: 8px;
 }
 
 .portfolio-name {
@@ -324,6 +330,8 @@ a {
 
 .footer {
   background-color: #2e2f42;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .footer .logo {
@@ -339,6 +347,7 @@ a {
   line-height: 1.5;
   color: #f4f4fd;
   letter-spacing: 0.02em;
+  padding-top: 16px;
 }
 
 .footer .logo-part {
