--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,7 @@ a {
   margin-bottom: 48px;
   margin-right: auto;
   margin-left: auto;
-  width: 496px;
+  max-width: 496px;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
@@ -161,8 +161,9 @@ a {
   background-color: #4d5ae5;
   cursor: pointer;
   margin: 0 auto;
-  width: 169px;
-  height: 56px;
+  min-width: 169px;
+  border: none;
+  border-radius: 4px;
 }
 
 .order-btn:hover,
@@ -341,13 +342,17 @@ a {
   color: #4d5ae5;
 }
 
+.logo {
+  margin-bottom: 16px;
+  display: inline-block;
+}
+
 .footer-text {
   max-width: 264px;
   font-size: 16px;
   line-height: 1.5;
   color: #f4f4fd;
   letter-spacing: 0.02em;
-  padding-top: 16px;
 }
 
 .footer .logo-part {
