--- a/css/styles.css
+++ b/css/styles.css
@@ -250,7 +250,6 @@ a {
   display: flex;
   align-items: center;
   gap: 24px;
-  border-radius: 0px 0px 4px 4px;
 }
 
 .our-team-item {
@@ -259,6 +258,7 @@ a {
   max-width: 100%;
   height: auto;
   width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .our-team-text {
@@ -292,6 +292,7 @@ a {
 .container-portfolio-smart {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
+  border-top: none;
 }
 
 .portfolio-list {
